Solved quotes overlap in a better way

--- a/css/style.css
+++ b/css/style.css
@@ -178,7 +178,7 @@ body {
 }
 
 .quotes img {
-    margin: 16px;
+    margin-bottom: 24px;
 }
 
 /* Features */
